test/sema/unsupported-subscript.delta.output
unsupported-subscript.delta:8:6: error: 'uint8*?' doesn't provide an index operator
    p[0] = 64;
     ^
