test/sema/unsupported-subscript.delta
// RUN: %check_errors %not %delta -typecheck %s

extern void*? f();

void main() {
    var p = cast<uint8*?>(f());
    // CHECK: [[@LINE+1]]:6: error: 'uint8*?' doesn't provide an index operator
    p[0] = 64;
}
